# todojoe

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  supabase-schema.sql
backend/: .env.example  README.md  pyproject.toml  railway.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/routes/: __init__.py  crypto.py  health.py  stocks.py
backend/app/schemas/: __init__.py  crypto.py  stock.py
backend/app/services/: __init__.py  crypto_service.py  stock_service.py
frontend/: .gitignore  jest.config.ts  jest.setup.ts  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  railway.toml
frontend/app/: globals.css  layout.tsx  manifest.ts  page.tsx
frontend/hooks/: useAssetData.ts  useAssetDetailModal.ts  useAssetPnL.ts  useAuthGuard.ts  useBfcacheRehydration.ts  useChartColors.ts  useCryptoData.ts  useCurrency.ts  useDocumentVisibility.ts  useFormatters.ts  useHoldingPeriodChanges.ts  useMetrics.ts  useMobileMode.ts  usePortfolio.ts  usePortfolioPnL.ts  usePrivacyMode.ts  useQuickOverviewGrid.ts  useSellPlanFlow.ts  useStockData.ts  useSupabaseSync.ts  useSwipeGesture.ts  useUndoRedo.ts  useVirtualScroll.ts
frontend/lib/: api.ts  assetDetailStats.ts  assetUtils.ts  audio.ts  authUtils.ts  crypto.ts  decimal.ts  formatters.ts  groq.ts  lazyCharts.tsx  logger.ts  market-data.ts  metrics.ts  portfolioSelectors.ts  portfolioUtils.ts  quoteUtils.ts  sellPlanningUtils.ts  tagUtils.ts
frontend/scripts/: google-auth.ts
frontend/stores/: allocationHistoryStore.ts  currencyStore.ts  dashboardStore.ts  ownerStore.ts  (+9 more)
(+187 files in other folders)
